--- a/voice-recorder/Base.lproj/Main.storyboard
+++ b/voice-recorder/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WAb-O2-XtU">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -23,6 +23,7 @@
                                 <state key="normal" title="Record"/>
                                 <connections>
                                     <action selector="onBtnRecordClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iC4-Es-J9d"/>
+                                    <segue destination="RIO-da-fIP" kind="show" id="cuO-BE-DIi"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap To Record..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qoF-je-gnT">
@@ -49,13 +50,52 @@
                             <constraint firstItem="qoF-je-gnT" firstAttribute="centerX" secondItem="MRB-aG-acX" secondAttribute="centerX" id="vNc-Bk-Lke"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="l3n-Uf-k8G"/>
                     <connections>
                         <outlet property="_btnRecord" destination="MRB-aG-acX" id="Cvb-zu-7lc"/>
+                        <outlet property="_btnStopRecording" destination="QzP-nh-vr5" id="0Hp-Q3-A4S"/>
                         <outlet property="_lblTapToRecord" destination="qoF-je-gnT" id="DWj-ES-Yeg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1109" y="384"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="PCf-bJ-WcX">
+            <objects>
+                <viewController id="RIO-da-fIP" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="clT-NC-Nzm"/>
+                        <viewControllerLayoutGuide type="bottom" id="gqx-ui-9B3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nag-Er-CmO">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.96078431369999995" green="0.63921568630000003" blue="0.16078431369999999" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nfe-8X-GON" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1796" y="361"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Cyx-un-190">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WAb-O2-XtU" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QBO-7X-Fr2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ZcK-JD-6ap"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vls-eg-iu6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="458" y="384"/>
         </scene>
     </scenes>
 </document>
